syntax = "proto3";

option csharp_namespace = "Books.GRPC";

package books;

service BookService {
  rpc GetBook (GetBookRequest) returns (BookUnit);
  rpc GetBooks (GetBooksRequest) returns (stream BookUnit);
  rpc AddBook (AddBookRequest) returns (AddBookResponse);
  rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
}

message GetBookRequest {
  int32 id = 1;
}
message GetBooksRequest {
  int32 page = 1;
  int32 limit = 2;
}
message AddBookRequest {
  string title = 1;
  string author = 2;
  string description = 3;
  string image = 4;
}
message AddBookResponse {
  int32 id = 1;
}
message UpdateBookRequest {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string description = 4;
  string image = 5;
}
message UpdateBookResponse {
  bool success = 1;
}
message DeleteBookRequest {
  int32 id = 1;
}
message DeleteBookResponse {
  bool success = 1;
}
message BookUnit {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string description = 4;
  string image = 5;
}